<resources>
    <string name="app_name">Facebook Helper</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_email">Invaid Email Address</string>
    <string name="invalid_password">Password is short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_need">Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Facebook content -->
    <string name="facebook_app_id">1662974273983482</string>
    <string name="fb_login_protocol_scheme">fb340786189652848</string>
    <string name="default_friends">Press to Load</string>
    <string name="no_friends_yet">No Friend yet</string>
    <string name="friend_name">Friend Name</string>
    <string name="birthday">Birthday: MM/DD/YYYY</string>
    <string name="phone_number">Phone Number: (___)-___-___</string>
    <string name="email">Email: @mail.com</string>
    <string name="gender">Gender: Male/Female</string>
    <string name="btn">Button</string>
    <string name="click_hint">Click to show more</string>
</resources>
